--- a/_plots/00_プロローグ.md
+++ b/_plots/00_プロローグ.md
@@ -2,17 +2,21 @@
 
 ## 場所
 
-なし
+- ヒロトの頭の中
 
 ## 時間
 
-- 十数年後
+- 2045年某日
 
 ## 出来事
 
-ヒロトが過去を振り返る。
-忘れるはずがないと思っていたのに、徐々に記憶は薄れていく。
+ヒロトがケイのことを振り返る。
+
+
+## 主な文章
+
+- 忘れるはずがないと思っていたのに、記憶は少しずつ薄れていく
+- ケイとの出会いは、高校の入学式の日だった
 
 ## 留意点
-
 
