--- a/_plots/01_確認の問い.md
+++ b/_plots/01_確認の問い.md
@@ -6,7 +6,7 @@
 
 ## 時間
 
-- 2040年4月上旬某日朝、入学式前
+- 2030年4月上旬某日朝、入学式前
 
 ## 登場人物
 
@@ -17,8 +17,7 @@
 
 ## 出来事
 
-ヒロトはもちろん、1年4組の生徒は皆、ケイと出会った入学式の朝のことを忘れないだろう。
-その日、登校した新入生は、自分のクラスを確認して教室で待つよう指示された。
+ヒロトが学校へ行くと、自分のクラスを確認して教室で待つよう指示された。
 教室では、高校での友だちを作ろうと、ぎこちない会話があちこちで繰り広げられている。
 しかし、内気なヒロトは誰とも話せずにいた。
 
