--- a/_plots/03_体育見学.md
+++ b/_plots/03_体育見学.md
@@ -6,7 +6,7 @@
 
 ## 時間
 
-- 4月某日、体育の時間
+- 4月某日午前、体育の時間
 
 ## 登場人物
 
@@ -35,24 +35,22 @@
 「サイボーグになれれば、強くなれる？
 「映画やアニメの中ではね」
 「きっと、あんなふうにはならない」
-心身二元論
+心身二元論の否定
 「生身の体に戻りたいか、といったけど、手に入らないものを望まない。でも、ふつうにあつかえるようになりたい」
 「なかなか、ふつうとはいかない」
 
+化粧
 
 ３つ目の体、３回生まれ変わってる
 その度に
 身体を変えることで、心を変えることが悪いとは思わない
 
-
-その後、ケイは機械の体の不自由さを説明し、それでもいつか生身の体と同じように動かせるようになりたいと話す。
-逆に、ヒロトは病弱な体の不自由さとサイボーグへの憧れを語る。
+「土曜日にそこへ来たら、サイボーグについて教えてあげる」
 
 ## 留意点
 
 - ケイは立ち上がるのが大変なため、地面には座らない
 
-- 心身二元論
 - ふつうを目指してたけど、ふつうにはなれなかった
 - 転校の伏線を張る
 
