Add some sentences

--- a/_drafts/00_プロローグ.md
+++ b/_drafts/00_プロローグ.md
@@ -1,25 +1,18 @@
-　今のぼくがあるのは、彼女との出会いがあったからだ。もう十年以上が経つけれど、初めて彼女を見た入学式の日のことは鮮明に覚えている。あれは、二〇四〇年のことだった。
+　今のぼくがあるのは、ケイとの出会いがあったからだ。もう十年以上が経つけれど、初めて彼女を見た入学式の日のことは鮮明に覚えている。あれは、二〇三六年のことだった。
 
 ---
 
-　教室では、どこの中学出身であるかとか、何の部活に興味があるといった、あたりさわりない会話があちこちで繰り広げられていた。初対面の相手にわるく思われないよう、あるいは、少しでもよく見られようと、どの会話もなんとなくぎこちない。そんな中、ぼくはまだ誰とも話さず、一人そわそわと教室を見回していた。
+　教室では、どこの中学出身だとか、何の部活に興味があるとか、どんなＶＲアバターを使ってるといった、あたりさわりない会話があちこちで繰り広げられていた。初対面の相手にわるく思われないよう、あるいは、少しでもよく見られようと、どの会話もなんとなくぎこちない。そんな中、ぼくはまだ誰とも話さず、一人そわそわと教室を見回していた。
 
-　学校に着いたとき、玄関にクラスが掲示されていて、自分のクラスを確認したのち、式の準備が整うまで各自の教室で待つよう指示された。一緒に登校した幼なじみのミノルとは、別のクラスだった。教室に入ると、すでに八割方のクラスメイトが揃っているようだった。入口ちかくの女子生徒が、黒板に出席番号順で席の指示があると、慣れた様子で教えてくれた。
+　学校に着いたとき、玄関にクラスが掲示されていて、自分のクラスを確認したら教室で待つよう指示された。一緒に登校した幼なじみのミノルとは、別のクラスだった。教室に入ると、すでに八割方のクラスメイトがそろっているようだった。教室の入口ちかくの女子生徒が、黒板に出席番号順で席の指示があると、慣れた様子で教えてくれた。
 
-　ぼくの席は、不運なことに、廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の女子生徒は、さらにその前の女子生徒とすでに話し込んでいる。左の男子生徒は、離れた席から立ってきた男子生徒と親しげに話している。どうやら同じ中学出身同士らしい。斜め前の席という選択肢もあるけれど、そこはまだ空席だった。
+　ぼくの席は――不運なことに――廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の女子生徒は、さらにその前の女子生徒とすでに話し込んでいる。左の男子生徒は、離れた席から立ってきた男子生徒と親しげに話している。どうやら同じ中学出身同士らしい。斜め前の席という選択肢もあるけれど、そこはまだ空席だった。
 
-　だから、ぼくは教室を見回していた。
+　だから、ぼくはまだ誰とも話せないでいた。後ろから全体を眺めると、同じように一人できまりが悪そうにしているクラスメイトがポツリポツリといるのがわかる。さっきからずっと、そのうちの一番近くの生徒のところへ席を立って話しかけにいこうか悩んでた。どうやって話しかけるのが自然か、何パターンも頭の中でシミュレーションする。なかなか第一声が決まらずに、時間だけが過ぎていく。
 
-VR 空間のアドレス
+　もんもんと考え込んでいるうちに、いつのまにか教室がしんと静まり返っていた。何があったのかとあわてて周りを見渡すと、みんな教室の入口の方を向いている。その視線の先には、新しく入ってきたクラスメイトがいた。それが、ケイだった。
 
-ぼくは誰とも話さず一人でそわそわと教室を見回していた。
+　はじめ、なぜみんなが黙り込んでしまったのか、ぼくにはわからなかった。彼女が普通の女子生徒に見えたのだ。しかし、彼女がドアを閉めようとして、すぐに違和感に気づく。*その動きは*、*人間のそれではなかった*。ロボット特有のカクカクした、なめらかさのない動きだったのである。静寂の中で、低くうなるモーター音だけが、かすかに響いていた。
 
-　教室は、期待と不安に包まれていた。
-自分を少しでも良く見せようと必死になっている。
-
-　学校に着くと、玄関にクラスが掲示されていて、自分のクラスを確認したのち、式の準備が整うまで各自の教室で待つよう指示された。一緒に登校した同じ中学出身ののミノルとは別のクラスだった。
-
-　新しい友達を作ろうと、前後や左右の席のクラスメイトとのぎこちない会話があちこちで始まっていた。
-　しかし、不運なことにぼくの席は、廊下側一番うしろの角の席で、前と左しか選択肢がない。そして、前の席はその前の席と、左の席はおそらく同じ中学出身同士で話し込んでいる。
-
-ポツリポツリと同じ状況の生徒
+　一瞬、ロボットが教室に入ってきたのかと思ったが、すぐにそんなはずがないことに思い至る。いくらロボットが
+サイボーグの紹介
