--- a/_drafts/00_プロローグ.md
+++ b/_drafts/00_プロローグ.md
@@ -1,18 +1,53 @@
-　今のぼくがあるのは、ケイとの出会いがあったからだ。もう十年以上が経つけれど、初めて彼女を見た入学式の日のことは鮮明に覚えている。あれは、二〇三六年のことだった。
+　今のぼくがあるのは、ケイとの出会いがあったからだ。もう十年以上が経つけれど、初めて彼女を見た入学式の日のことは鮮明に覚えている。あれは、二〇三二年のことだった。
 
 ---
 
 　教室では、どこの中学出身だとか、何の部活に興味があるとか、どんなＶＲアバターを使ってるといった、あたりさわりない会話があちこちで繰り広げられていた。初対面の相手にわるく思われないよう、あるいは、少しでもよく見られようと、どの会話もなんとなくぎこちない。そんな中、ぼくはまだ誰とも話さず、一人そわそわと教室を見回していた。
 
-　学校に着いたとき、玄関にクラスが掲示されていて、自分のクラスを確認したら教室で待つよう指示された。一緒に登校した幼なじみのミノルとは、別のクラスだった。教室に入ると、すでに八割方のクラスメイトがそろっているようだった。教室の入口ちかくの女子生徒が、黒板に出席番号順で席の指示があると、慣れた様子で教えてくれた。
+　学校に着いたとき、玄関にクラスが掲示されていて、自分のクラスを確認したら教室で待つよう指示された。一緒に登校した幼なじみのミノルとは、別のクラスだった。教室に入ると、すでに八割方のクラスメイトがそろっているようだった。教室の入口ちかくのスカートを履いた長い髪の生徒が、黒板に出席番号順で席の指示があると、慣れた様子で教えてくれた。
 
-　ぼくの席は――不運なことに――廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の女子生徒は、さらにその前の女子生徒とすでに話し込んでいる。左の男子生徒は、離れた席から立ってきた男子生徒と親しげに話している。どうやら同じ中学出身同士らしい。斜め前の席という選択肢もあるけれど、そこはまだ空席だった。
+　ぼくの席は――不運なことに――廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の生徒は、さらにその前の生徒とすでに話し込んでいる。左の生徒は、離れた席から立ってきた生徒と親しげに話している。どうやら同じ中学出身同士らしく、最近流行りの VR ゲームの話をしていた。斜め前の席という選択肢もあるけれど、そこはまだ空席だった。
 
 　だから、ぼくはまだ誰とも話せないでいた。後ろから全体を眺めると、同じように一人できまりが悪そうにしているクラスメイトがポツリポツリといるのがわかる。さっきからずっと、そのうちの一番近くの生徒のところへ席を立って話しかけにいこうか悩んでた。どうやって話しかけるのが自然か、何パターンも頭の中でシミュレーションする。なかなか第一声が決まらずに、時間だけが過ぎていく。
 
 　もんもんと考え込んでいるうちに、いつのまにか教室がしんと静まり返っていた。何があったのかとあわてて周りを見渡すと、みんな教室の入口の方を向いている。その視線の先には、新しく入ってきたクラスメイトがいた。それが、ケイだった。
 
-　はじめ、なぜみんなが黙り込んでしまったのか、ぼくにはわからなかった。彼女が普通の女子生徒に見えたのだ。しかし、彼女がドアを閉めようとして、すぐに違和感に気づく。*その動きは*、*人間のそれではなかった*。ロボット特有のカクカクした、なめらかさのない動きだったのである。静寂の中で、低くうなるモーター音だけが、かすかに響いていた。
+　はじめ、なぜみんなが黙り込んでしまったのか、ぼくにはわからなかった。彼女が普通の生徒に見えたのだ。しかし、彼女がドアを閉めようとして、違和感に気づく。*その動きは*、*人間のそれではなかった*。ロボット特有のなめらかさに欠けた動きだったのである。静寂の中で、低くうなるモーター音だけが響いていた。
 
-　一瞬、ロボットが教室に入ってきたのかと思ったが、すぐにそんなはずがないことに思い至る。いくらロボットが
-サイボーグの紹介
+　一瞬、ロボットが教室に入ってきたのかと思った。けれど、すぐそんなはずがないことに思い至る。いくら街中でロボットを見かけることが多くなったといはいえ、公立の学校に導入されるほど普及したわけではない。何より、これほどまで人間を模した精巧なロボットが学校なんかにいるはずがない。
+
+　きっと、彼女はサイボーグなのだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二〇年代初頭に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突如現れ、これが脳科学や神経科学といった人間の身体に関する分野にブレイクスルーをもたらした。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
+
+　しかし、彼女ほど身体を人工物で代替している人は見たことがない。ドアを閉める動きから、両手両足が義肢であることが分かる。そして、彼女の顔も造りものだった。いや、遠目にはほとんどわからない。それでも、人形の顔がどんなによくできていても、それが人間でないと分かるのと同じように、彼女の顔が自然のものでないことはわかる。その瞳や表情には、何か生気のようなものが感じられなかった。
+
+　彼女は、ドアを閉めるとみんなが座っている方へと振り返った。ぼくは、すぐに目をそらした。彼女が全身サイボーグであるなら、それは重度の身体障がい者であることを意味する。何か重い事故や病気ために、サイボーグにならざるを得なかったのだろう。そう思ったとき、ジロジロと見つめていたことが、なんだか悪く感じられた。他のクラスメイトも同じだったのだろう。さっきまでの会話の続きに戻りつつあった。
+
+　彼女がサイボーグであることがわかると、ぼくは目をそらした。じろじろと見つめてしまったことが気まずく感じられた。仮に全身サイボーグであるなら、それは彼女が重度の身体障碍者であることを意味する。何か重い事故や病気ために、サイボーグになるしかなかったのかもしれない。じっと見つめるのはなんだか悪い気がした。
+
+彼女がサイボーグであるということがわかると、
+
+　他の多くのクラスメイトも、彼女がサイボーグであることに気づいているようだった。じろじろと見つめてしまったことに気まずさを感じて、さっきまでの会話に戻ろうとしていた。ぼくも
+
+何組かはさっきまでの会話に戻ろうとしていた。
+
+他のクラスメイトも気づく
+
+
+一瞬わからなかったが、服の外に
+言いようのない人工物間
+
+
+人工臓器なんかは見た目にはわからないので、もしかしたら気づいていないだけで、もっといるのかもしれない。
+
+それは、人工臓器や義肢技術の進歩だけでなく、それらをサポートするマイクロマシンやソフトウェア的な側面も大きい。
+戦地
+自主的に
+ほとんどの
+
+マイクロマシン技術の進歩も大きい
+ソフトウェア
+
+マイクロマシン
+
+この十数年で、人工臓器や義肢技術は飛躍的に進歩した。
+SF の世界から「サイボーグ」という言葉が使われ
