Add some sentences

--- a/_drafts/00_プロローグ.md
+++ b/_drafts/00_プロローグ.md
@@ -6,48 +6,23 @@
 
 　学校に着いたとき、玄関にクラスが掲示されていて、自分のクラスを確認したら教室で待つよう指示された。一緒に登校した幼なじみのミノルとは、別のクラスだった。教室に入ると、すでに八割方のクラスメイトがそろっているようだった。教室の入口ちかくのスカートを履いた長い髪の生徒が、黒板に出席番号順で席の指示があると、慣れた様子で教えてくれた。
 
-　ぼくの席は――不運なことに――廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の生徒は、さらにその前の生徒とすでに話し込んでいる。左の生徒は、離れた席から立ってきた生徒と親しげに話している。どうやら同じ中学出身同士らしく、最近流行りの VR ゲームの話をしていた。斜め前の席という選択肢もあるけれど、そこはまだ空席だった。
+　ぼくの席は――不運なことに――廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の生徒は、さらにその前の生徒とすでに話し込んでいる。左の生徒は、離れた席から立ってきた生徒と一緒に、クラスの女子についてアリだとかナシだとか話していた。話している内容も含め、着崩した制服や気取った話し方からして、あまり関わりたくない感じだった。斜め前の席という選択肢もあるけれど、そこはまだ空席だった。
 
-　だから、ぼくはまだ誰とも話せないでいた。後ろから全体を眺めると、同じように一人できまりが悪そうにしているクラスメイトがポツリポツリといるのがわかる。さっきからずっと、そのうちの一番近くの生徒のところへ席を立って話しかけにいこうか悩んでた。どうやって話しかけるのが自然か、何パターンも頭の中でシミュレーションする。なかなか第一声が決まらずに、時間だけが過ぎていく。
+　だから、ぼくはまだ誰とも話せないでいた。後ろから全体を眺めると、同じように一人できまりが悪そうにしているクラスメイトがポツリポツリといるのがわかる。そのうちの一番近くの生徒のところへ席を立って話しかけにいこうか、なんて考える。どうやって話しかけるのが自然か、何パターンも頭の中でシミュレーションした。なかなか第一声が決まらずに、時間だけが過ぎていく。
 
 　もんもんと考え込んでいるうちに、いつのまにか教室がしんと静まり返っていた。何があったのかとあわてて周りを見渡すと、みんな教室の入口の方を向いている。その視線の先には、新しく入ってきたクラスメイトがいた。それが、ケイだった。
 
 　はじめ、なぜみんなが黙り込んでしまったのか、ぼくにはわからなかった。彼女が普通の生徒に見えたのだ。しかし、彼女がドアを閉めようとして、違和感に気づく。*その動きは*、*人間のそれではなかった*。ロボット特有のなめらかさに欠けた動きだったのである。静寂の中で、低くうなるモーター音だけが響いていた。
 
-　一瞬、ロボットが教室に入ってきたのかと思った。けれど、すぐそんなはずがないことに思い至る。いくら街中でロボットを見かけることが多くなったといはいえ、公立の学校に導入されるほど普及したわけではない。何より、これほどまで人間を模した精巧なロボットが学校なんかにいるはずがない。
+　一瞬、ロボットが教室に入ってきたのかと思った。けれど、すぐそんなはずがないことに思い至る。いくらロボットが普及してきたとはいえ、公立の学校に導入されるほどではない。何より、これほどまで人間を模した精巧なロボットが、学校なんかにいるはずがない。
 
-　きっと、彼女はサイボーグなのだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二〇年代初頭に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突如現れ、これが脳科学や神経科学といった人間の身体に関する分野にブレイクスルーをもたらした。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
+　きっと、彼女はサイボーグなのだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二〇年に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突如現れ、これが脳科学や神経科学といった人間の身体に関する分野にブレイクスルーをもたらした。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
 
-　しかし、彼女ほど身体を人工物で代替している人は見たことがない。ドアを閉める動きから、両手両足が義肢であることが分かる。そして、彼女の顔も造りものだった。いや、遠目にはほとんどわからない。それでも、人形の顔がどんなによくできていても、それが人間でないと分かるのと同じように、彼女の顔が自然のものでないことはわかる。その瞳や表情には、何か生気のようなものが感じられなかった。
+　しかし、彼女ほど身体を人工物で代替している人は見たことがない。ドアを閉める動きから、両手両足が義肢であることが分かる。そして、彼女の顔も造りものだった。いや、遠目にはほとんどわからない。それでも、どんなによくできていても人形の顔が人間でないと分かるのと同じように、彼女の顔が自然のものでないことはわかる。その瞳や表情には、なにか生気のようなものが感じられなかった。
 
-　彼女は、ドアを閉めるとみんなが座っている方へと振り返った。ぼくは、すぐに目をそらした。彼女が全身サイボーグであるなら、それは重度の身体障がい者であることを意味する。何か重い事故や病気ために、サイボーグにならざるを得なかったのだろう。そう思ったとき、ジロジロと見つめていたことが、なんだか悪く感じられた。他のクラスメイトも同じだったのだろう。さっきまでの会話の続きに戻りつつあった。
+　彼女はドアを閉めると、僕たちの方を振り返った。ぼくは、さっと目をそらした。彼女が全身サイボーグであるなら、それは重度の身体障がい者であることを意味する。何か重い事故や病気ために、サイボーグにならざるをえなかったのだろう。そう思ったとき、じろじろと見つめていたことが、なんだか悪く思えた。他のクラスメイトも同じだったのだろう。多くがさっきまでの会話の続きに戻っていた。
 
-　彼女がサイボーグであることがわかると、ぼくは目をそらした。じろじろと見つめてしまったことが気まずく感じられた。仮に全身サイボーグであるなら、それは彼女が重度の身体障碍者であることを意味する。何か重い事故や病気ために、サイボーグになるしかなかったのかもしれない。じっと見つめるのはなんだか悪い気がした。
+　とはいえ、話し相手のいないぼくは、教室の様子をうかがうくらいしかやることがない。顔をあげると、さっき席について教えてくれた生徒が、サイボーグの彼女にも同じ説明をしていた。
 
-彼女がサイボーグであるということがわかると、
+　すると、彼女がこちらに向かって歩いてきて、ぼくの斜め前の席で止まった。その形を確かめるようにしばらく席を眺めると、ゆっくりと椅子を引く。そして、椅子の位置を何度も確認しながら、ゆっくりと席についた。
 
-　他の多くのクラスメイトも、彼女がサイボーグであることに気づいているようだった。じろじろと見つめてしまったことに気まずさを感じて、さっきまでの会話に戻ろうとしていた。ぼくも
-
-何組かはさっきまでの会話に戻ろうとしていた。
-
-他のクラスメイトも気づく
-
-
-一瞬わからなかったが、服の外に
-言いようのない人工物間
-
-
-人工臓器なんかは見た目にはわからないので、もしかしたら気づいていないだけで、もっといるのかもしれない。
-
-それは、人工臓器や義肢技術の進歩だけでなく、それらをサポートするマイクロマシンやソフトウェア的な側面も大きい。
-戦地
-自主的に
-ほとんどの
-
-マイクロマシン技術の進歩も大きい
-ソフトウェア
-
-マイクロマシン
-
-この十数年で、人工臓器や義肢技術は飛躍的に進歩した。
-SF の世界から「サイボーグ」という言葉が使われ
