Improve the first scene

--- a/_drafts/00_プロローグ.md
+++ b/_drafts/00_プロローグ.md
@@ -2,47 +2,47 @@
 
 ---
 
-　教室では、どこの中学出身だとか、何の部活に興味があるとか、どんなＶＲアバターを使ってるといった、あたりさわりない会話があちこちで繰り広げられていた。初対面の相手にわるく思われないよう、あるいは、少しでもよく見られようと、どの会話もなんとなくぎこちない。そんな中、ぼくはまだ誰とも話さず、一人そわそわと教室を見回していた。
+　教室では、どこの中学出身だとか、何の部活に興味があるといった、あたりさわりない会話があちこちで繰り広げられていた。初対面の相手にわるく思われないよう、あるいは、少しでもよく見られようと、どの会話もなんとなくぎこちない。そんな中、ぼくはまだ誰とも話さず、一人そわそわと教室を見まわしていた。
 
-　学校に着いたとき、玄関にクラスが掲示されていて、自分のクラスを確認したら教室で待つよう指示された。一緒に登校した幼なじみのミノルとは、別のクラスだった。教室に入ると、すでに八割方のクラスメイトがそろっているようだった。教室の入口ちかくのスカートを履いた長い髪の生徒が、黒板に出席番号順で席の指示があると、慣れた様子で教えてくれた。
+　学校に着いたとき、玄関の掲示で自分のクラスを確認して、教室で待つよう指示された。一緒に登校した幼なじみのミノルとは、別のクラスだった。教室に入ると、すでに八割方のクラスメイトがそろっているようだった。入口近くの席のスカートを履いた長い髪の生徒が、黒板に出席番号順で席の指示があると、慣れた様子で教えてくれた。
 
-　ぼくの席は――不運なことに――廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の生徒は、さらにその前の生徒と何やら話し込んでいる。左の生徒と斜め前の生徒は、クラスの女子についてアリだとかナシだとか話していた。話題もそうだけれど、二人の雰囲気もあまり関わりたくない感じだった。二人とも制服をかなり着崩していて、左の席の生徒にいたっては校則違反のピアスまでしている。
+　ぼくの席は――不運なことに――廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の生徒は、さらにその前の生徒とすでに話し込んでいる。左の生徒と左斜め前の生徒は、クラスの女子を一人ひとり取り上げては、アリだとかナシだとか話していた。二人とも制服をかなり着崩していて、左の席の生徒にいたっては校則違反のピアスまでしている。あまり関わりたくない感じだ。
 
-　そういうわけで、ぼくはまだ誰とも話せないでいた。後ろから全体を眺めると、同じように一人できまりが悪そうにしているクラスメイトがポツリポツリといるのがわかる。そのうちの一番近くの生徒のところへ席を立って話しかけにいこうか、なんて考える。どうやって話しかけるのが自然か、何パターンも頭の中でシミュレーションした。なかなか第一声が決まらずに、時間だけが過ぎていく。
+　そういうわけで、ぼくはまだ誰とも話せないでいた。後ろから全体を眺めると、同じように一人できまり悪そうにしているクラスメイトがポツリポツリといるのがわかる。そのうちの一番近い生徒のところへ席を立って話しかけにいこうか、なんて考える。どうやって話しかけるのが自然か、頭の中で色々とシミュレーションした。なかなか第一声が決まらずに、時間が過ぎていく。
 
-　もんもんと考え込んでいるうちに、いつのまにか教室がしんと静まり返っていた。何があったのかとあわてて周りを見渡すと、みんな教室の入口の方を向いている。その視線の先には、新しく入ってきたクラスメイトがいた。
+　一人で考え込んでいるうちに、いつのまにか教室がしんと静まり返っていた。何があったのかとあわてて周りを見渡すと、みんな教室の入口の方を向いている。その視線の先には、新しく入ってきたクラスメイトがいた。
 
 　それが、ケイだった。
 
 　はじめ、なぜみんなが黙り込んでしまったのか、ぼくにはわからなかった。彼女が普通の生徒に見えたのだ。しかし、彼女がドアを閉めようとして、違和感に気づく。*その動きは*、*人間のそれではなかった*。ロボット特有のなめらかさに欠けた動きだったのである。静寂の中で、低くうなるモーター音だけが響いていた。
 
-　一瞬、ロボットが教室に入ってきたのかと思った。けれど、すぐそんなはずがないことに思い至る。いくらロボットが普及してきたとはいえ、公立の学校に導入されるほどではない。何より、これほどまで人間を模した精巧なロボットが、学校なんかで必要になるはずがない。
+　一瞬、ロボットが教室に入ってきたのかと思った。けれど、すぐそんなはずがないことに思い至る。いくらロボットが普及してきたとはいえ、公立の学校に導入されるほどではない。何より、可能な限り人間を模した精巧なロボットが、学校なんかで必要になるはずがない。
 
-　きっと、彼女はサイボーグなのだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二〇年に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突如公開され、これが脳科学や神経科学といった人間の身体に関する分野にブレイクスルーをもたらした。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
+　きっと、彼女はサイボーグだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二〇年に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突如公開され、これが脳科学や神経科学といった人間の身体に関する分野を大きく発展させた。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
 
-　しかし、彼女ほど身体を人工物で代替している人は見たことがない。ドアを閉める動きから、両手両足が義肢であることが分かる。そして、彼女の顔も造りものだった。いや、遠目にはほとんどわからない。それでも、どんなによくできていても人形の顔が人間でないと分かるのと同じように、彼女の顔が自然のものでないことはわかる。その瞳や表情には、なにか生気のようなものが感じられなかった。
+　しかし、彼女ほど身体の多くをサイボーグ化している人は見たことがない。ドアを閉める動きから、両手両足が義肢であることが分かる。服の内側はわからないが、顔も造りものだった。いや、遠目にはほとんどわからない。それでも、どんなに精巧な人形の顔も人間でないと分かるのと同じように、彼女の顔が自然のものでないことがわかる。その瞳や表情には、なにか生気のようなものが感じられなかった。
 
 　彼女はドアを閉めると、ぼくらの方を振り返った。ぼくは、さっと目をそらした。彼女が全身サイボーグであるなら、それは重度の身体障がい者であることを意味する。何か重い事故や病気ために、サイボーグにならざるをえなかったのだろう。そう思ったとき、じろじろと見つめていたことが、なんだか悪く思えたのだ。他のクラスメイトも同じなのだろう。多くがさっきまでの会話の続きに戻っていた。
 
-　とはいえ、話し相手のいないぼくは、教室を様子をうかがうくらいしかやることがない。顔をあげると、さっき席について教えてくれた髪の長い生徒が、サイボーグの彼女にも同じ説明をしていた。じろじろ見ないようにとは思っても、好奇心には勝てず、ぼくは目の端で彼女の動きを追っていた。
+　とはいえ、話し相手のいないぼくは、教室を様子をうかがうくらいしかすることがない。顔をあげると、さっき席について教えてくれた髪の長い生徒が、サイボーグの彼女にも同じ説明をしていた。じろじろ見ないようにとは思っても、好奇心には勝てず、ぼくは目の端で彼女の動きを追っていた。
 
-　彼女は、黒板を確認すると、教室の真ん中の方へ歩いていった。彼女の席らしい空席の前で止まると、その形を確かめるようにしばらく席を眺める。そして、椅子を引くと、何度も自身と椅子の位置関係を確認しながら、ゆっくりと席についた。
+　彼女は、黒板を確認すると、教室の真ん中の方へ歩いていった。彼女の席らしい空席の前で止まると、その形を確かめるようにしばらく席を眺める。そして、椅子を引くと、何度も自身と椅子の位置関係を確認しながら、ゆっくりと席についた。椅子にかけるというのも、機械化した身体には簡単なことではないようだ。
 
-「なあ、あれってロボットじゃないよな？」斜め前の席の生徒が、左のピアスの生徒に小声で聞いた。ピアスの生徒が面倒そうに答える。
-「わかんねえ。本人に聞いたら？」
+「なあ、あれってロボットじゃないよな？」斜め前の席の生徒が、左のピアスの生徒に小声で聞いた。
+「わかんねえ。本人に聞いたら？」ピアスの生徒が面倒そうに答える。
 「いや、聞けるわけないだろ……」斜め前の生徒が笑いながらいった。しかし、ピアスの生徒は冗談のつもりではなかったらしい。
 「じゃ、おれが聞いてやるよ」
 
 　いたずらを思いついたようにニヤッと笑って、その生徒はケイの方へ歩いていった。そして、彼女の正面に立って薄笑いを浮かべたままいった。
 「“あなたは、ロボットですか？”」
 
-　それは、〈{確認の問い|ベリファイ・クエリ}〉と呼ばれるものの一つだった。自然言語を扱うＡＩは、この問いに必ず“イエス”で答えなければならない。これは、国際規格で定められていて、ＡＩをつくる企業はこれを守ることが義務付けられている。近年のＡＩは、カスタマーサポートや予約受付といった内容が決まった会話であれば、人間と同じ、あるいは、それ以上にこなすことができた。そのため、電話の相手がＡＩか人間かを判別することは容易ではない。しかし、区別できないと困ることもあるため、そのような規格が定められた。
+　それは、〈{確認の問い|ベリファイ・クエリ}〉と呼ばれる質問の一つだった。自然言語を扱うＡＩは、この問いに必ず“イエス”で答えなければならない。これは、国際規格で定められていて、ＡＩをつくる企業はこれを守ることが義務付けられている。近年のＡＩは、カスタマーサポートや予約受付といった内容が決まった会話であれば、人間と同じ、あるいは、それ以上にこなすことができた。そのため、電話の相手がＡＩか人間かを判別することは容易ではない。しかし、区別できないと困ることもあるため、そのような規格が定められた。
 
 　とはいえ、それをサイボーグに問うのはあまりにデリカシーがない。
 
-　その生徒の質問によって、ケイは再び教室全体の注目を集めることになった。ケイの方に耳を向けて面白がるように返答を待つものや、眉をひそめてピアスの生徒の質問をとがめる様子のものもいる。ぼくを含め多くの生徒が、好奇心半分、非難半分といった感じで二人を見つめていた。
+　その生徒の質問によって、ケイは再び教室全体の注目を集めることになった。面白がるようにケイの返答を待つものや、眉をひそめてピアスの生徒の質問をとがめる様子のものもいる。ぼくを含め、多くの生徒が、好奇心半分、非難半分といった感じで二人の方を見ていた。
 
-「私がロボットだと思った？」ケイの口が開いて、合成音声が口*付近*から発せられる。彼女は、発音の難しい人工声帯は採用しなかったらしい。
+「私がロボットだと思った？」ケイの口が開いて、合成音声が口*付近*から発せられる。彼女は、発音の難しい人工声帯ではなく、合成音声を発するスピーカーを採用しなかったらしい。
 「いや、一応確認しておこうと思って」予想外の強気な返事に、ピアスの生徒が少し戸惑ったようすでいった。
 「そう。じゃ、君は童貞？」間髪入れずに彼女がきいた。
 
@@ -50,5 +50,6 @@
 
 「確認のためなら何でも聞いていいと思うな」ピアスの生徒が何かいう前にケイがいった。
 
-　こうして、タツオというピアスの男子生徒が童貞であることと、ケイという生徒がロボットではなく人間であり、それも孤高の存在であることがクラスの共通認識となった。ぼくは、ケイをかっこいいと思った。
+　こうして、タツオというピアスの男子生徒が童貞であることと、ケイという生徒がロボットではなく人間であり、それもかなり*タフ*であることがクラスの共通認識となった。
+　ぼくは、何ものにも物怖じしない彼女を、かっこいいと思った。
 
