--- a/_drafts/01_確認の問い.md
+++ b/_drafts/01_確認の問い.md
@@ -36,7 +36,7 @@
 　いたずらを思いついたようにニヤッと笑って、その生徒はケイの方へ歩いていった。そして、彼女の正面に立って薄笑いを浮かべたままいった。
 「“あなたは、ロボットですか？”」
 
-　それは、〈{確認の問い|ベリファイ・クエリ}〉と呼ばれる質問の一つだった。自然言語を扱うＡＩは、この問いに必ず“イエス”で答えなければならない。これは、国際規格で定められていて、ＡＩをつくる企業はこれを守ることが義務付けられている。近年のＡＩは、カスタマーサポートや予約受付といった内容が決まった会話であれば、人間と同じ、あるいは、それ以上にこなすことができた。そのため、電話の相手がＡＩか人間かを判別することは容易ではない。しかし、区別できないと困ることもあるため、そのような規格が定められた。
+　それは、〈{確認の問い|ベリファイ・クエリ}〉と呼ばれる質問の一つだった。自然言語を扱うＡＩは、この問いに必ず“イエス”で答えなければならない。これは、国際規格で定められていて、ＡＩをつくる企業はこれを守ることが義務付けられている。近年のＡＩは、カスタマーサポートや予約受付といった内容が決まった会話であれば、人間と同じ、あるいは、それ以上にこなすことができた。そのため、電話の相手がＡＩか人間かを判別することは容易ではない。しかし、区別できないと困ることもあるため、そ確認の問いのような規格が定められた。
 
 　とはいえ、それをサイボーグに問うのはあまりにデリカシーがない。
 
