Start to write the second schene

--- a/_drafts/01_確認の問い.md
+++ b/_drafts/01_確認の問い.md
@@ -51,5 +51,5 @@
 「確認のためなら何でも聞いていいと思うな」ピアスの生徒が何かいう前にケイがいった。
 
 　こうして、タツオというピアスの男子生徒が童貞であることと、ケイという生徒がロボットではなく人間であり、それもかなり*タフ*であることがクラスの共通認識となった。
-　ぼくは、何ものにも物怖じしない彼女を、かっこいいと思った。
+　ぼくは、彼女をかっこいいと思った。
 
