--- a/_drafts/02_帰り道.md
+++ b/_drafts/02_帰り道.md
@@ -1,38 +1,50 @@
-「――その後はどうなったの？」幼なじみのミノルがいった。入学式が終わったあとの帰り道、駅のホームでベンチに腰かけて電車を待っているときだった。
-「先生がきておしまい」ぼくが答える。校門で待ち合わせてからここまで、今朝教室で起きたことを話していた。サイボーグの生徒が不良の生徒をやり込めた話は、あっという間に噂になっていて、ミノルが会うなりその話を聞きたがったのだ。
-「そっか。……ところで、そのケイって子、女子なんだよね？」ミノルがちょっと迷ってからきいた。
+「――その後はどうなった？」幼なじみのミノルがいった。入学式が終わったあとの帰り道、駅のホームでベンチに腰かけて電車を待っているときだった。
+「ちょうど時間になって先生がきたんだ。だから、そこで終わり」ぼくが答える。
+
+　校門で待ち合わせてからここまで、今朝教室で起きたことを話していた。サイボーグの生徒が不良の生徒をやり込めた話は、あっという間に噂になっていて、会うなりミノルがその話を聞きたがったのだ。
+
+「そっか。殴り合いの喧嘩とかにならなくてよかったな。相手の生徒、けっこう柄悪かったんだろ」それまで前のめりに聞いていたミノルが、ベンチにもたれかかりながらいった。心配しているようかのような言いぶりだけれど、本心では殴り合いになった方が面白かったのに、と思っているに違いない。
+「やっぱりサイボーグは喧嘩も強いのかな」ふと思いついたように、ミノルが続けた。
+「たぶん、弱いと思うよ。椅子に座るだけでもかなり大変そうだったし、あまり機敏な動きはできないんじゃないかな……」教室での様子を思い出しながらいう。
+「サイボーグっていっても、そんなもんかあ……」ミノルが伸びをしながらいった。少し間をあけて、ぼくの方を横目で見ながらきく。
+「ヒロトも、昔はよくサイボーグになりたいって言ってたけど、今もそう思ってる……？」
+
+　意外な質問に、少し驚く。たしかに、小学生くらいの頃、ぼくはサイボーグにあこがれていた。今思えばたわいのない夢だけれど、ミノルがそれを覚えていて、さらにそれを真面目に聞いてきたことがおかしくて、ぼくはふっと笑う。
+「そういえば、そんなこと言ってたな……」
+
+　そういって、ぼくは少し考える。いまもサイボーグになりたいと思うだろうか。
+
+　ぼくがサイボーグになりたかったのは、病弱な体を頑丈な機械の体に取り替えたかったからだ。ぼくは幼い頃から病気がちで、何度も入退院を繰り返していた。生まれつきの持病があるというわけではない。ただ風邪にかかりやすく、また、重症化しやすい体質らしい。いくつもの病院をまわったけれど、根本的な原因はわからなかった。そうやって病気で苦しい思いを繰り返すうち、この不自由な体ごと取り替えてしまいたいと考えるようになった。そんなとき、サイボーグ技術が急速に進歩しているというニュースを聞く。それを聞いて小学生のぼくの頭の中にうかんだのは、昔ながらの映画やアニメに出てくる超人的な強いサイボーグだった。近い将来、そんなふうになれると思って、サイボーグになりたい、なんて言っていたのだ。
+　しかし、現実のサイボーグはそんなに強くない。
+
+「仮にタダでサイボーグにしてやるっていわれても、いまの技術レベルだったらなりたくはないかな……」
+
+　そう言いながら、ケイのことを思い出す。彼女自身は、機械の体をどう感じているのだろう。少し動かすだけでも、実はすごく大変なことなんだろうか。それに、彼女は頭も含めた全身サイボーグだ。五官のすべてを人工物で代替している。
+
+「もし、心まで強く慣れるなら、ちょっと考えてみてもいいな……」
+
+昔ながらの映画やアニメに出てくる超人的なサイボーグをみて、こんなふうに体を機械に取り替えて強くなりたいと思ったものだ。
+
+当時は、サイボーグ技術の急速な進歩が、連日ニュースや特集で取り上げられていた。それに、
+サイボーグ
+
+を見ていたことがおかしくてぼくは少し笑いながら答える。
+
+
+　たしかに、小学生の頃、ぼくはサイボーグにあこがれていた。けれど、それは映画やアニメに出てくるフィクションの超人的サイボーグに対するものだった。現実のサイボーグ
+そのギャップに少し笑う。
+
+　ミノルがそんな昔のことを、ぼくは少し笑う。
+
+「そういえば、そんなこと言ってたな……」
+
+　たしかに、ぼくは小学生の頃、サイボーグにあこがれていた。
+
+---
+
+「そうか。……ところで、そのケイって子、女子なんだよな？」ミノルが少し迷ってからきいた。
 「スカートだったし、たぶんそうだと思うよ。……どうして？」
-「いや、『童貞？』なんていう女子、なかなかいないよなと思って……」ミノルがなんでもない、というふうに肩をすくめていった。
-「まあ、たしかに……」ぼくはちょっと口ごもる。サイボーグの生物学的性やジェンダーというのは少し気になったけれど、それを話題にするのは避けたかった。
+「いや、『童貞？』なんていう女子、なかなかいないよなと思って。それに、*全身*サイボーグってことはさ……」ミノルが、ちょっと言いにくそうに言葉を切った。
+「まあ、たしかに……」ぼくはちょっと口ごもる。サイボーグの性というのは少し気になったけれど、それを話題にするのは避けたかった。
 
-　ミノルは、本名をミノリといって、生物学的には女性だ。しかし、{性自認|ジェンダー・アイデンティティ}は男性で、中学に入る前からミノルと名乗っている。普段はそれを意識することはないけれど、こうして少しでも性が関わることが話題になると、どう話せばいいのか一瞬わからなくなる。そうやって意識することこそが、ミノルに気まずい思いをさせると分かっていても、どうしようもなかった。昔はこんなことなかったのに……。
-
-「――それにしても、殴り合いの喧嘩とかにならなくてよかったね」ミノルが話題を変える。ぼくがいまの話題を避けようとしていることを察したのだ。逆に気を使わせたことが申し訳なかった。
-「やっぱりサイボーグは喧嘩も強いのかな」ミノルが続ける。
-
-変にぼくが意識することがミノルに悪い
-
-ぼくとミノルとは幼稚園の頃からの付き合いだが、ずっと同性の友達として接してきた。普段はなんてことが
-
-「でも、殴り合いの喧嘩とかにならなくてよかったね」
-
-「そこまでサイボーグ化しているとなると、もともと生物学的には女性であったとしても性別ってどうなるんだろう……」
-
-
-
-
-
-「まあ、そうだけど……」
-
-
-
-
-ミノルは生物学的には女子だ
-ミノルとはふつうに男友達として接してきたが、ぼくはこの話題が苦手だった。
-
-
-
-
-「そっか。殴り合いの喧嘩とかにならなくてよかったね」ミノルがのんきにいう。
-「やっぱりサイボーグは喧嘩も強いのかな」
-「たぶん弱いと思うよ」
+　ミノルは、本名をミノリといって、生物学的には女性だ。しかし、{性自認|ジェンダー・アイデンティティ}は男性で、中学に入る前からミノルと名乗っている。普段はそれを意識することはないけれど、こうして少しでも性が関わることが話題になると、どう話せばいいのか一瞬わからなくなる。そうやって意識することこそが、ミノルに気まずい思いをさせると分かっていても、どうしようもなかった。
