Add some sentences

--- a/_drafts/02_帰り道.md
+++ b/_drafts/02_帰り道.md
@@ -10,35 +10,29 @@
 「ヒロトも、昔はよくサイボーグになりたいって言ってたけど、今もそう思ってる……？」
 
 　意外な質問に、少し驚く。たしかに、小学生くらいの頃、ぼくはサイボーグにあこがれていた。今思えばたわいのない夢だけれど、ミノルがそれを覚えていて、さらにそれを真面目に聞いてきたことがおかしくて、ぼくはふっと笑う。
-「そういえば、そんなこと言ってたな……」
+「そういえば、そんなこと言ってたっけ……」
 
 　そういって、ぼくは少し考える。いまもサイボーグになりたいと思うだろうか。
 
-　ぼくがサイボーグになりたかったのは、病弱な体を頑丈な機械の体に取り替えたかったからだ。ぼくは幼い頃から病気がちで、何度も入退院を繰り返していた。生まれつきの持病があるというわけではない。ただ風邪にかかりやすく、また、重症化しやすい体質らしい。いくつもの病院をまわったけれど、根本的な原因はわからなかった。そうやって病気で苦しい思いを繰り返すうち、この不自由な体ごと取り替えてしまいたいと考えるようになった。そんなとき、サイボーグ技術が急速に進歩しているというニュースを聞く。それを聞いて小学生のぼくの頭の中にうかんだのは、昔ながらの映画やアニメに出てくる超人的な強いサイボーグだった。近い将来、そんなふうになれると思って、サイボーグになりたい、なんて言っていたのだ。
-　しかし、現実のサイボーグはそんなに強くない。
+　ぼくがサイボーグになりたかったのは、病弱な体を頑丈な機械の体に取り替えたかったからだ。ぼくは幼い頃から病気がちで、何度も入退院を繰り返していた。生まれつきの持病があるというわけではない。ただ風邪にかかりやすく、また、重症化しやすい体質らしい。そうやって苦しい思いを繰り返すうち、この不自由な体ごと取り替えてしまいたいと考えるようになった。そんなとき、サイボーグ技術が急速に進歩しているというニュースを聞く。小学生のぼくの頭の中にうかんだのは、昔ながらの映画やアニメに出てくる超人的な強いサイボーグだった。近い将来、そんなふうになれると思って、サイボーグになりたい、なんて言っていたのだ。
 
-「仮にタダでサイボーグにしてやるっていわれても、いまの技術レベルだったらなりたくはないかな……」
+　しかし、現実のサイボーグはそんなに強くない。身体機能を代替できるといっても、ほとんどはかろうじてなんとかなるといったレベルだ。ましてや、人間の能力を完全に上回るなんてことは、まだまだありえない。
 
-　そう言いながら、ケイのことを思い出す。彼女自身は、機械の体をどう感じているのだろう。少し動かすだけでも、実はすごく大変なことなんだろうか。それに、彼女は頭も含めた全身サイボーグだ。五官のすべてを人工物で代替している。
+「仮にタダでも、{現代|いま}のサイボーグにはなりたくないかな……」
 
-「もし、心まで強く慣れるなら、ちょっと考えてみてもいいな……」
+　そう言いながら、ぼくはケイのことを思い浮かべる。彼女にとっては、椅子に座ることも、階段を上り下りすることも、人と会話することも、実はすごく大変なことのはずだ。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取れなかったけれど、かなり無理をしていただろう。にもかかわらず、不良の生徒をやり込めるなんてことをやってのけたのだ。改めて、彼女はすごいなと思った。
 
-昔ながらの映画やアニメに出てくる超人的なサイボーグをみて、こんなふうに体を機械に取り替えて強くなりたいと思ったものだ。
-
-当時は、サイボーグ技術の急速な進歩が、連日ニュースや特集で取り上げられていた。それに、
-サイボーグ
-
-を見ていたことがおかしくてぼくは少し笑いながら答える。
+ちょっと体を動かすだけでも、実はすごく大変なことなのかもしれない。いや、サイボーグ技術の現状を聞く限り、そうに違いない。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取ることができなかったけれど、本当はかなり無理をしていたのかもしれない。
 
 
-　たしかに、小学生の頃、ぼくはサイボーグにあこがれていた。けれど、それは映画やアニメに出てくるフィクションの超人的サイボーグに対するものだった。現実のサイボーグ
-そのギャップに少し笑う。
+それに、彼女は頭も含めた全身サイボーグだ。五官のほぼすべてを人工物で代替している。彼女にとって、いったい世界はどんなふうに見えるんだろう。カメラのレンズを通したり、イヤホンを通したりしたような感じなのだろうか。それなら、においや味は……。すべての感覚が機械を通したものになることを想像して、ぼくは少し怖くなった。
 
-　ミノルがそんな昔のことを、ぼくは少し笑う。
+　それでも、
+人工皮膚の表情からは何も読み取ることができなかったけれど、
 
-「そういえば、そんなこと言ってたな……」
+「もし、彼女みたいに心まで強くなれるなら、考えてみてもいいけど……」ポロッと言って恥ずかしくなる。横でミノルが声を上げて笑っていた。
 
-　たしかに、ぼくは小学生の頃、サイボーグにあこがれていた。
+彼女の顔を思い浮かべたけれど、人工皮膚の表情からは何も読み取ることができなかった。
 
 ---
 
