Write draft of the second scene

--- a/_drafts/02_帰り道.md
+++ b/_drafts/02_帰り道.md
@@ -3,42 +3,35 @@
 
 　校門で待ち合わせてからここまで、今朝教室で起きたことを話していた。サイボーグの生徒が不良の生徒をやり込めた話は、あっという間に噂になっていて、会うなりミノルがその話を聞きたがったのだ。
 
-「そっか。殴り合いの喧嘩とかにならなくてよかったな。相手の生徒、けっこう柄悪かったんだろ」それまで前のめりに聞いていたミノルが、ベンチにもたれかかりながらいった。心配しているようかのような言いぶりだけれど、本心では殴り合いになった方が面白かったのに、と思っているに違いない。
-「やっぱりサイボーグは喧嘩も強いのかな」ふと思いついたように、ミノルが続けた。
-「たぶん、弱いと思うよ。椅子に座るだけでもかなり大変そうだったし、あまり機敏な動きはできないんじゃないかな……」教室での様子を思い出しながらいう。
-「サイボーグっていっても、そんなもんかあ……」ミノルが伸びをしながらいった。少し間をあけて、ぼくの方を横目で見ながらきく。
-「ヒロトも、昔はよくサイボーグになりたいって言ってたけど、今もそう思ってる……？」
+「そっか。殴り合いのけんかとかにならなくてよかったな。相手の生徒、けっこう柄悪かったんだろ」それまで前のめりぎみに聞いていたミノルが、ベンチにもたれかかりながらいった。心配しているようかのような言いぶりだけれど、本心では殴り合いになった方が面白かったのに、なんて思っているに違いない。
+「やっぱり、サイボーグはけんかも強いのかな」ふと思いついたように、ミノルが続けた。
+「たぶん、弱いと思うよ。椅子に座るだけでもかなり大変そうだったし、あまり機敏な動きはできないんじゃないかな……」教室での様子を思い出して、ぼくはいった。
+「サイボーグっていっても、そんなもんかあ……」ミノルが伸びをしながらいう。少し間をあけて、ぼくの方を横目で見ながらきく。
+「ヒロトも昔、よくサイボーグになりたいって言ってたけど、今もそう思ってる……？」
 
 　意外な質問に、少し驚く。たしかに、小学生くらいの頃、ぼくはサイボーグにあこがれていた。今思えばたわいのない夢だけれど、ミノルがそれを覚えていて、さらにそれを真面目に聞いてきたことがおかしくて、ぼくはふっと笑う。
 「そういえば、そんなこと言ってたっけ……」
 
 　そういって、ぼくは少し考える。いまもサイボーグになりたいと思うだろうか。
 
-　ぼくがサイボーグになりたかったのは、病弱な体を頑丈な機械の体に取り替えたかったからだ。ぼくは幼い頃から病気がちで、何度も入退院を繰り返していた。生まれつきの持病があるというわけではない。ただ風邪にかかりやすく、また、重症化しやすい体質らしい。そうやって苦しい思いを繰り返すうち、この不自由な体ごと取り替えてしまいたいと考えるようになった。そんなとき、サイボーグ技術が急速に進歩しているというニュースを聞く。小学生のぼくの頭の中にうかんだのは、昔ながらの映画やアニメに出てくる超人的な強いサイボーグだった。近い将来、そんなふうになれると思って、サイボーグになりたい、なんて言っていたのだ。
+　ぼくがサイボーグになりたかったのは、病弱な体を頑丈な機械の体に取り替えたかったからだ。ぼくは、幼い頃から病気がちで、入退院を繰り返していた。何度も苦しい思いをするうちに、この不自由な体ごと取り替えてしまいたいと考えるようになった。そんなとき、サイボーグ技術が急速に進歩しているというニュースを聞く。小学生のぼくの頭の中にうかんだのは、映画やアニメに出てくる超人的な強いサイボーグだった。近い将来、そんなふうになれると思って、サイボーグになりたい、なんて言っていたのだ。
 
-　しかし、現実のサイボーグはそんなに強くない。身体機能を代替できるといっても、ほとんどはかろうじてなんとかなるといったレベルだ。ましてや、人間の能力を完全に上回るなんてことは、まだまだありえない。
+　しかし、現実のサイボーグはそんなに強くない。身体機能を代替できるといっても、ほとんどはかろうじてなんとかなんるというレベルだ。ましてや、人間の能力を完全に上回るなんてことはありえない。
 
 「仮にタダでも、{現代|いま}のサイボーグにはなりたくないかな……」
 
-　そう言いながら、ぼくはケイのことを思い浮かべる。彼女にとっては、椅子に座ることも、階段を上り下りすることも、人と会話することも、実はすごく大変なことのはずだ。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取れなかったけれど、かなり無理をしていただろう。にもかかわらず、不良の生徒をやり込めるなんてことをやってのけたのだ。改めて、彼女はすごいなと思った。
+　そう言いながら、ぼくはケイのことを思い浮かべる。彼女にとっては、椅子に座ることも、階段を上り下りすることも、人と会話することも、実はとても大変なことのはずだ。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取れなかったけれど、かなり無理をしていたに違いない。にもかかわらず、ちょかいをかけてきた生徒を撃退するなんてことをやってのけたのだ。改めて、すごいな、と思った。
 
-ちょっと体を動かすだけでも、実はすごく大変なことなのかもしれない。いや、サイボーグ技術の現状を聞く限り、そうに違いない。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取ることができなかったけれど、本当はかなり無理をしていたのかもしれない。
+「でも、彼女のように強くなれるなら、考えてもいいかもしれない……」思っていたことがつい口に出て、すぐにしまった、と思った。横でミノルが声を上げて笑っている。
+「それは、サイボーグと関係ないだろ」
+「そりゃそうだけど……」そんなに笑わなくてもいいだろ、と頭の中でつけ加える。
 
+「まあ、いくらやり返すためとはいえ、いきなり『童貞？』なんてきくような女子、なかなかいないよな……」ミノルはそういうと、ふと迷ったようすで続けた。
+「そのケイって子、女子、でいいんだよな……？」
+「スカートだったし、そうだと思うよ……」ぼくはちょっと口ごもる。
+「そっか……。*全身*サイボーグってことだから、ちょっと気になった」そういって、ミノルは肩をすくめる。
+「うん……」ぼくは、なんて言えばいいかわからなかった。サイボーグの性というのは少し気になるけれど、それを話題にするのは避けたかった。
 
-それに、彼女は頭も含めた全身サイボーグだ。五官のほぼすべてを人工物で代替している。彼女にとって、いったい世界はどんなふうに見えるんだろう。カメラのレンズを通したり、イヤホンを通したりしたような感じなのだろうか。それなら、においや味は……。すべての感覚が機械を通したものになることを想像して、ぼくは少し怖くなった。
+　ミノルは、本名をミノリといって、生物学的には女性だ。しかし、{性自認|ジェンダー・アイデンティティ}は男性で、中学に入る前からミノルと名乗っている。普段はそれを意識することはないけれど、こうして性が関わることが話題になると、どう話せばいいのか一瞬わからなくなる。そうやって変に意識することこそが、ミノルに気まずい思いをさせると分かっていても、どうにもできなかった。ミノルも、ぼくがこの話題を苦手に思っていることを知っていて、あまりその手の話を振ってくることはない。ただ、そうやって気を使わせていることも、ぼくには申し訳なかった。ミノルにとって大事な話を、友達としてきちんと聞いてやれない自分が嫌だった。
 
-　それでも、
-人工皮膚の表情からは何も読み取ることができなかったけれど、
-
-「もし、彼女みたいに心まで強くなれるなら、考えてみてもいいけど……」ポロッと言って恥ずかしくなる。横でミノルが声を上げて笑っていた。
-
-彼女の顔を思い浮かべたけれど、人工皮膚の表情からは何も読み取ることができなかった。
-
----
-
-「そうか。……ところで、そのケイって子、女子なんだよな？」ミノルが少し迷ってからきいた。
-「スカートだったし、たぶんそうだと思うよ。……どうして？」
-「いや、『童貞？』なんていう女子、なかなかいないよなと思って。それに、*全身*サイボーグってことはさ……」ミノルが、ちょっと言いにくそうに言葉を切った。
-「まあ、たしかに……」ぼくはちょっと口ごもる。サイボーグの性というのは少し気になったけれど、それを話題にするのは避けたかった。
-
-　ミノルは、本名をミノリといって、生物学的には女性だ。しかし、{性自認|ジェンダー・アイデンティティ}は男性で、中学に入る前からミノルと名乗っている。普段はそれを意識することはないけれど、こうして少しでも性が関わることが話題になると、どう話せばいいのか一瞬わからなくなる。そうやって意識することこそが、ミノルに気まずい思いをさせると分かっていても、どうしようもなかった。
+　少し気まずくなった空気をなんとかしようと、互いに別の話を考えあぐねているうちに、もうすぐ電車がくるというアナウンスが流れた。
