Add some sentences

--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -1,55 +1,17 @@
-　入学式以降も、サイボーグの新入生は注目の的だった。入学式の朝の出来事は、童貞事件という名前で、上級生にもあっという間に広まっていた。しかし、彼女は全く気にしていないようだった。みんな彼女が気になっていたけれど、事件の内容もあって、下手に話しかけるものはなかった。
-　次の日、クラスで自己紹介が行われ、趣味が読書ということと、車で南に30分くらいのところに住んでいるということがわかった。彼女は、車で送迎してもらって通学しているらしかった。運転しているのが誰なのかはわからない。
-　みんな、彼女がどういう経緯でサイボーグになったのかや、サイボーグであることを僕たちにどう捉えてほしいのかということが聞きたかったが、彼女の口からそれが語られることはなかった。そしてやはり、それを聞こうとするものもいなかった。
+　入学式以降も、サイボーグの新入生は注目の的だった。入学式の朝の出来事は、童貞事件という名前で、上級生にもまたたく間に広まっていた。しかし、注目の的とはいえ、事件の内容もあって、下手に話しかけるものはなかった。
 
+　クラスで行われた自己紹介から、趣味が読書ということと、車で南に30分くらいのところに住んでいるということがわかった。彼女は、車で送迎してもらって通学しているらしかった。
 
-次の日、クラスで自己紹介が行われたけれど、彼女は車で送迎してもらって通学していた。誰かが本人から聞いた話によると、南へ20分くらいのところに住んでいるらしい。
-　
-特に、あの事件の後だから、
+　みんな、彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということが聞きたがったが、彼女の口からそれが語られることはなかった。そしてやはり、それを直接聞こうとするものもいなかった。
 
+　授業中、彼女に特別な配慮がなされるということはほとんどなかった。当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているらしかった。そんな様子を見て、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないようだった。ただ、教室移動なんかのときに気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
 
-みんなが出身中学について話すなか、彼女だけはそれに触れなかった。実際、彼女の出身中学を知るものは誰もいないようだった。趣味は読書ということだったけれど、彼女がどんな本を読んでいるのかはわからない。その日、彼女がどこから来るのかを
+　昼休みに、彼女は教室から姿を消す。あとをつけたという生徒の話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んでドアを開けようとしたらしいが、鍵がかかっていたらしい。そこで彼女は、*充電*しているのではないか、という噂だった。
 
-過去のことは話したくない
+　まだまだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女は本当はやはりロボットで、彼女がここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、彼女の体には一般には知られていない様々な隠し機能があるといった話だ。他にも、彼女は実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、童貞事件を根に持ったタツオが、クラスの外で流したものらしかった。
 
-にまつわる話題に事欠くことはなかった。
+　そういった話の中で、唯一信憑性のあるものは、彼女が六年前の航空機事故の被害者というものだった。その根拠は、その被害者名簿に彼女の両親とおぼしき男女の名前があったことだった。二人とも彼女と同じ姓で、その姓は決してよくある姓というわけではなかった。記事には、当時まだ実験導入だった緊急生命維持装置が用いられたという記述もあった。それは、サイボーグ技術の中核となる技術を応用したものだった。
 
-- 何者か
-  - 出身中学は不明
-    - 誰も彼女の中学時代を知らない
-  - 後をつけると車で送迎
-    - 本人に聞くと、東隣の市、車で20分くらいかかる
-    - 運転手は親とかではなさそう
-  - 6年前の飛行機事故
-- 噂
-  - 実はおばあちゃんだとか（高校に通うためにサイボーグになるのはやりすぎ
-  - やっぱりロボットで、ロボットを学校に入れる社会実験だとか（あまりに性格に難がある
-  - 国主導のサイボーグプロジェクトの被検体だとか（SF映画のみすぎ
-    - 本当はめちゃくちゃ強い
-- クラスでの様子
-  - 話しかえればふつうに話す
-  - 自分からは話しかけないし、自分のことは話さない
-  - はっきりと話したくない
-  - 興味のない話には付き合わない
-  - 昼休みには消える
-    - 充電しているという噂
-  - 
-根も葉もない噂
+---
 
-セクサロイドの
-
-
-
-（噂は上級生にも広まる）
-
-謎
-車で通学
-出身中学はなぞで、彼女の中学時代を知るものはいない
-どこに住んでいるのかもわからない
-車で通学。親ではなさそうだった
-
-信憑性が高い
-飛行機事故
-
-なぜサイボーグになったかは「話せないの」
-
+　ぼくはというと、
