Add some sentences

--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -1,17 +1,36 @@
-　入学式以降も、サイボーグの新入生は注目の的だった。入学式の朝の出来事は、童貞事件という名前で、上級生にもまたたく間に広まっていた。しかし、注目の的とはいえ、事件の内容もあって、下手に話しかけるものはなかった。
+　入学式以降も、サイボーグの新入生は注目の的だった。入学式の朝の出来事は、童貞事件という名前で、上級生にもまたたく間に広まっていた。しかし、注目の的とはいえ、事件の内容もあって、下手に彼女に話しかけるものはなかった。
 
-　クラスで行われた自己紹介から、趣味が読書ということと、車で南に30分くらいのところに住んでいるということがわかった。彼女は、車で送迎してもらって通学しているらしかった。
+　クラスで行われた自己紹介から、趣味が読書ということと、車で南に三十分くらいのところに住んでいるということがわかった。彼女は、車で送迎してもらって通学しているらしかった。みんな、彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということが聞きたがったが、彼女の口からそれが語られることはなかった。
 
-　みんな、彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということが聞きたがったが、彼女の口からそれが語られることはなかった。そしてやはり、それを直接聞こうとするものもいなかった。
+　授業中、彼女に特別な配慮がなされるということはほとんどなかった。当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているらしかった。そんな様子を見て、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないようだった。ただ、教室移動なんかのときに、ある生徒が気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
 
-　授業中、彼女に特別な配慮がなされるということはほとんどなかった。当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているらしかった。そんな様子を見て、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないようだった。ただ、教室移動なんかのときに気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
-
-　昼休みに、彼女は教室から姿を消す。あとをつけたという生徒の話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んでドアを開けようとしたらしいが、鍵がかかっていたらしい。そこで彼女は、*充電*しているのではないか、という噂だった。
+　昼休みに、彼女は教室から姿を消す。あとをつけたという生徒の話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んでドアを開けてのぞき見しようとしたらしいが、鍵がかかっていたらしい。彼女は、そこで*充電*しているのではないか、という噂だった。
 
 　まだまだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女は本当はやはりロボットで、彼女がここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、彼女の体には一般には知られていない様々な隠し機能があるといった話だ。他にも、彼女は実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、童貞事件を根に持ったタツオが、クラスの外で流したものらしかった。
 
-　そういった話の中で、唯一信憑性のあるものは、彼女が六年前の航空機事故の被害者というものだった。その根拠は、その被害者名簿に彼女の両親とおぼしき男女の名前があったことだった。二人とも彼女と同じ姓で、その姓は決してよくある姓というわけではなかった。記事には、当時まだ実験導入だった緊急生命維持装置が用いられたという記述もあった。それは、サイボーグ技術の中核となる技術を応用したものだった。
+　そういった話の中で、唯一信憑性のあるものは、彼女が六年前の航空機事故の被害者というものだった。その根拠は、その被害者名簿に彼女の両親とおぼしき男女の名前があったことだった。二人とも彼女と同じ姓で、その姓は決してよくある姓というわけではなかった。記事には、当時まだ実験導入だった緊急生命維持装置が用いられたという記述もあった。それは、サイボーグの中核となる技術を応用したものだった。
 
----
+　普段から彼女を気遣っている生徒――入学式の朝、席について教えてくれた髪の長い子だ――が、一度だけ、ごくごく遠まわしに、彼女がサイボーグになった経緯を聞こうとしたことがあった。しかし、ケイがきっぱりと「話したくない」といってその話は終わった。それ以来、誰も彼女にその話をすることはなかった。
 
-　ぼくはというと、
+　ぼくはというと、四月が終わろうとしているいまも、あまりクラスになじめずにいた。席の位置の悪さと、内気な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活動にも入らなかった。休み時間は基本ｖ的に一人で過ごしていた。最近はまた体調も悪くなってきていて、今日は体育の授業を見学している。
+
+　クラスメイトがハードル走の練習をしているのを、運動場の隅の木陰に座ってぼんやり眺めていると、突然話しかけられた。
+「きみ、サイボーグになりたいの」
+
+　声のした方を振り向く。ケイだった。彼女はいつも、体育は見学している。サイボーグが生身の体の生徒と一緒に運動するというのは難しいのだろう。ぼくは体操服に着替えていたが、彼女は制服のままだった。
+
+　突然話しかけられたこともそうだけれど、何より質問の内容に驚いた。
+「どうして……」うまく言葉が出てこない。
+
+「ちょっと小耳に挟んで」
+
+「小さい頃のたわごとだよ」申し訳なく思った
+「きみは、生身の体に戻りたいと思う？」
+
+「いきなり突っ込んだこと聞くのね」
+「それはお互い様だろ」
+
+「絶対に手に入らないものを望んだりしない」
+「でも、生身の体と同じように扱えるようになりたいとは思う」
+
+「
