--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -1,18 +1,18 @@
 　入学式以降も、サイボーグの新入生は注目の的だった。入学式の朝の出来事は、童貞事件という名前で、上級生にもまたたく間に広まっていた。しかし、注目の的とはいえ、事件の内容もあって、下手に彼女に話しかけるものはなかった。
 
-　クラスで行われた自己紹介から、趣味が読書ということと、車で南に三十分くらいのところに住んでいるということがわかった。彼女は、車で送迎してもらって通学しているらしかった。みんな、彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということが聞きたがったが、彼女の口からそれが語られることはなかった。
+　クラスで行われた自己紹介から、彼女の趣味が読書ということと、車で南に三十分くらいのところに住んでいるということがわかった。彼女は、どうやら車による送迎で通学しているらしかった。みんなが聞きたかったのは、彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということだったが、彼女の口からそれが語られることはなかった。
 
-　授業中、彼女に特別な配慮がなされるということはほとんどなかった。当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているらしかった。そんな様子を見て、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないようだった。ただ、教室移動なんかのときに、ある生徒が気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
+　授業中、彼女に特別な配慮がなされるということはほとんどなかった。当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているようだった。そんな様子を見て、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないみたいだった。ただ、教室移動なんかのときに、ある生徒が気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
 
-　昼休みに、彼女は教室から姿を消す。あとをつけたという生徒の話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んでドアを開けてのぞき見しようとしたらしいが、鍵がかかっていたらしい。彼女は、そこで*充電*しているのではないか、という噂だった。
+　昼休みに、彼女は教室から姿を消す。あとをつけたというクラスメイトの話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んでドアを開けてのぞき見しようとしたらしいが、鍵がかかっていたらしい。彼女は、そこで*充電*しているのではないか、という噂だった。
 
-　まだまだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女は本当はやはりロボットで、彼女がここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、彼女の体には一般には知られていない様々な隠し機能があるといった話だ。他にも、彼女は実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、童貞事件を根に持ったタツオが、クラスの外で流したものらしかった。
+　まだまだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女はやはりロボットで、ここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、彼女の体には一般には知られていない様々な隠し機能があるといった話だ。他にも、実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、童貞事件を根に持ったタツオが、クラスの外で流したものらしかった。
 
-　そういった話の中で、唯一信憑性のあるものは、彼女が六年前の航空機事故の被害者というものだった。その根拠は、その被害者名簿に彼女の両親とおぼしき男女の名前があったことだった。二人とも彼女と同じ姓で、その姓は決してよくある姓というわけではなかった。記事には、当時まだ実験導入だった緊急生命維持装置が用いられたという記述もあった。それは、サイボーグの中核となる技術を応用したものだった。
+　そういった話の中で、唯一信憑性があるのは、彼女が六年前の航空機事故の被害者というものだった。その根拠は、死亡者リストに彼女の両親とおぼしき男女の名前があったことだ。二人とも彼女と同じ姓で、それは決してよくある姓というわけではなかった。記事には、当時まだ実験導入だった緊急生命維持装置が用いられたという記述もあった。それは、サイボーグの中核となる技術を応用したものだった。
 
 　普段から彼女を気遣っている生徒――入学式の朝、席について教えてくれた髪の長い子だ――が、一度だけ、ごくごく遠まわしに、彼女がサイボーグになった経緯を聞こうとしたことがあった。しかし、ケイがきっぱりと「話したくない」といってその話は終わった。それ以来、誰も彼女にその話をすることはなかった。
 
-　ぼくはというと、四月が終わろうとしているいまも、あまりクラスになじめずにいた。席の位置の悪さと、内気な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活動にも入らなかった。休み時間は基本ｖ的に一人で過ごしていた。最近はまた体調も悪くなってきていて、今日は体育の授業を見学している。
+　ぼくはというと、四月が終わろうとしているいまも、あまりクラスになじめずにいた。席の場所の悪さと、内気な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活動にも入らなかった。休み時間は基本的に一人で過ごしていた。最近はまた体調も悪くなってきていて、今日は体育の授業を見学している。
 
 　クラスメイトがハードル走の練習をしているのを、運動場の隅の木陰に座ってぼんやり眺めていると、突然話しかけられた。
 「きみ、サイボーグになりたいの」
@@ -20,17 +20,32 @@
 　声のした方を振り向く。ケイだった。彼女はいつも、体育は見学している。サイボーグが生身の体の生徒と一緒に運動するというのは難しいのだろう。ぼくは体操服に着替えていたが、彼女は制服のままだった。
 
 　突然話しかけられたこともそうだけれど、何より質問の内容に驚いた。
-「どうして……」うまく言葉が出てこない。
+「どうして……ミノルから聞いたの」うまく言葉が出てこない。
 
-「ちょっと小耳に挟んで」
+ケイ「いいえ、彼からではないわ」ミノルのことは知っているのか
 
-「小さい頃のたわごとだよ」申し訳なく思った
-「きみは、生身の体に戻りたいと思う？」
+ヒロト「小さい頃のたわごとだよ。ヒーローにあこがれるのと同じさ」申し訳なく思った
+ヒロト「サイボーグになったから、そんなに強くなったの？」きいて恥ずかしくなる
+ケイ「面白いこというのね」
+「ごめん、いやならいいんだ」
+「でも、たぶんそうだと思う。サイボーグにならなかったら今の私はない」
 
-「いきなり突っ込んだこと聞くのね」
-「それはお互い様だろ」
+ケイ「口が硬そうだから話すけど、これから話すことは秘密にして」
 
-「絶対に手に入らないものを望んだりしない」
-「でも、生身の体と同じように扱えるようになりたいとは思う」
+ケイ「事故にあって次に意識を取り戻したとき、そこにあったのは地獄だった。
+親は死んでいて、ほとんど脳だけの存在になっていた。視覚と聴覚はすでに接続済みだったけど、ノイズがひどくて慣れるまで時間がかかった」
 
-「
+想像を絶する話だった。恐ろしくなった。
+
+ケイ「自分が機械の体になったことを認識したあとは、自分が本当に人間なのか自信を持てなくなった。いまでこそ、サイボーグという存在が知られてきたけれど、数年前、しかも子どものサイボーグなんて認知されてなかったから、ロボットだと思われた。入学式の朝の件は初めてじゃなかった。自分を強く持たないといけない」
+
+ケイ「悔しかった。自分を強く持たないといけない。ロボットではない、と意識して。そのときに今の私が生まれた。サイボーグにならなかったら、こうはならない」
+
+ヒロト「体のせいにしてちゃダメだよね」
+
+ケイ「私は、そうは思わない。強くなろうとしたのは、私の意思と言えるかもしれないけれど、それは体のせいでもある。
+心と体は密接に関係している。化粧とか。人間の歴史は身体の拡張
+丈夫な体になれば、心も強くなるという可能性はないとは思わない
+「強い体を手に入れたいと思うのは、不自然なことじゃない」
+
+「身近にいるんだから、きいてみたら」
