--- a/_plots/04_VR空間.md
+++ b/_plots/04_VR空間.md
@@ -16,15 +16,21 @@
 ## 出来事
 
 ヒロトはまた高熱で入院した。
-今は収まって明後日には退院予定。
-VR 空間（視覚・聴覚のみ）でミノルと会う。
+3日寝込んで収まって明後日には退院予定。
+GW だったので、あまり影響はない
 
-ミノルは体を変えたいと思ったことがないか尋ねる。
-「あるよ」
-トランスジェンダーの悩み
-きっと彼女の悩みはそんなもんじゃない空間
+VR 空間（視覚・聴覚のみ、電話の延長）でミノルと会っていた。
+ヒロト「ミノルはさ、体を変えたいと思ったことはある？」
+ミノル「あるよ、何度も。自分の体じゃない。いつかは男性になると思っていた。実はホルモン治療も受けてる」
 
-実は今日もケイの周りで問題があった
+ヒロト「そうだったんだ」
+ミノル「ヒロトが昔と何ら変わらず接してくれたから、男だと思うことができた」
+ミノル「そんな話するなんてなにかあった？」
+
+ヒロト「ケイに言われたんだ」
+
+ミノル「自分も伝聞だから話すか迷ったんだけど……」
+実はケイの周りで問題があった
 ケイが彼女を助けようとした生徒をケガさせてしまったのだ
 
 
