--- a/_plots/06_エピローグ.md
+++ b/_plots/06_エピローグ.md
@@ -1,4 +1,4 @@
-# エピローグエピローグエピローグ
+# エピローグ
 
 ## 場所
 
@@ -14,11 +14,21 @@
 
 ## 出来事
 
-転校したあとの彼女がみつからなかった。
-機械の体になったかは明かさないが、世界中を飛び回っている
-今は外科医師として活躍していることを語る
+これがぼくとケイと過ごした1ヶ月だ。
+それを最後に、彼女には会っていない。
+あれから十数年、転校したあとも彼女を何度も探しけれどみつからない
+あの時代の全身サイボーグなんて、すぐに見つかりそうなものだけど。
+彼女の送迎が何者なのかもわからなかった。
+
+
+
+クラスメイトの中には彼女をほとんど覚えていないものもいる。
+
+
 
 ## 留意点
+
+- 冒頭の「いまのぼくがあるのは」に答える？
 
 - 学校には記録が残っていない
 - 事故のことも曖昧で、そこからたどることはできない
