Add some sentences

--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -1,26 +1,61 @@
-　入学式以降も、サイボーグの新入生は注目の的だった。入学式の朝の出来事は、童貞事件という名前で、上級生にもまたたく間に広まっていた。しかし、注目の的とはいえ、事件の内容もあって、下手に彼女に話しかけるものはなかった。
+　入学式以降も、サイボーグの新入生は注目の的だった。あの朝の出来事は、上級生にもまたたく間に広まっていた。しかし、注目の的とはいえ、事件の内容もあって、下手に彼女に話しかけるものはなかった。
 
-　クラスで行われた自己紹介から、彼女の趣味が読書ということと、車で南に三十分くらいのところに住んでいるということがわかった。彼女は、どうやら車による送迎で通学しているらしかった。みんなが聞きたかったのは、彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということだったが、彼女の口からそれが語られることはなかった。
+　クラスで行われた自己紹介から、彼女の趣味が読書ということと、車で南に三十分くらいのところに住んでいるということがわかった。彼女は、どうやら車による送迎で通学しているらしかった。
 
-　授業中、彼女に特別な配慮がなされるということはほとんどなかった。当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているようだった。そんな様子を見て、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないみたいだった。ただ、教室移動なんかのときに、ある生徒が気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
+　彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということを、みんな聞きたがっていたが、彼女の口からそれが語られることはなかった。
+
+　授業がはじまっても、彼女に特別な配慮がなされるということはほとんどなかった。当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているようだった。彼女が思ったより普通だということがわかると、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないみたいだった。ただ、教室移動なんかのときに、ある生徒が気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
 
 　昼休みに、彼女は教室から姿を消す。あとをつけたというクラスメイトの話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んでドアを開けてのぞき見しようとしたらしいが、鍵がかかっていたらしい。彼女は、そこで*充電*しているのではないか、という噂だった。
 
-　まだまだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女はやはりロボットで、ここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、彼女の体には一般には知られていない様々な隠し機能があるといった話だ。他にも、実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、童貞事件を根に持ったタツオが、クラスの外で流したものらしかった。
+　まだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女はやはりロボットで、ここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、彼女の体には一般には知られていない特殊なパーツが使われているといった話だ。他にも、実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、あの事件を根に持ったタツオがクラスの外で流したものらしかった。
 
 　そういった話の中で、唯一信憑性があるのは、彼女が六年前の航空機事故の被害者というものだった。その根拠は、死亡者リストに彼女の両親とおぼしき男女の名前があったことだ。二人とも彼女と同じ姓で、それは決してよくある姓というわけではなかった。記事には、当時まだ実験導入だった緊急生命維持装置が用いられたという記述もあった。それは、サイボーグの中核となる技術を応用したものだった。
 
-　普段から彼女を気遣っている生徒――入学式の朝、席について教えてくれた髪の長い子だ――が、一度だけ、ごくごく遠まわしに、彼女がサイボーグになった経緯を聞こうとしたことがあった。しかし、ケイがきっぱりと「話したくない」といってその話は終わった。それ以来、誰も彼女にその話をすることはなかった。
+　普段から彼女を気遣っている生徒――入学式の朝、席について教えてくれた髪の長い子だ――が、一度だけ、ごくごく遠まわしに、彼女がサイボーグになった経緯を聞こうとしたことがあった。しかし、ケイがきっぱりと「話したくない」といってその話は終わった。それ以来、誰も彼女にそれを聞くことはなかった。
 
-　ぼくはというと、四月が終わろうとしているいまも、あまりクラスになじめずにいた。席の場所の悪さと、内気な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活動にも入らなかった。休み時間は基本的に一人で過ごしていた。最近はまた体調も悪くなってきていて、今日は体育の授業を見学している。
+　ぼくはというと、四月が終わろうという時になっても、あまりクラスになじめずにいた。席の場所の悪さと、内気な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活にも入らなかった。休み時間は基本的に一人で過ごす。また、体調もだんだんと悪くなってきていた。
 
-　クラスメイトがハードル走の練習をしているのを、運動場の隅の木陰に座ってぼんやり眺めていると、突然話しかけられた。
-「きみ、サイボーグになりたいの」
+　その日、ぼくは体育の授業を見学していた。クラスメイトがハードル走の練習をしているのを、運動場の隅の木陰に座ってぼんやり眺めているときだった。
+「きみ、サイボーグになりたいの」と、横から突然声がした。
 
-　声のした方を振り向く。ケイだった。彼女はいつも、体育は見学している。サイボーグが生身の体の生徒と一緒に運動するというのは難しいのだろう。ぼくは体操服に着替えていたが、彼女は制服のままだった。
+　振り向くと、そこにケイが立っていた。彼女はいつも体育を見学している。サイボーグが生身の体の生徒と一緒に運動するというのは難しいのだろう。ぼくは体操服に着替えていたが、彼女は制服のままだった。
 
-　突然話しかけられたこともそうだけれど、何より質問の内容に驚いた。
-「どうして……ミノルから聞いたの」うまく言葉が出てこない。
+「なんで知ってるの」突然話しかけられたこともそうだけれど、何より質問の内容に驚いた。
+「そう言うってことは、本当になりたいんだ」ケイがいう。
+
+　ミノルが話したんだろうか、ということが頭をよぎるが、ミノルと彼女に接点があるとは考えにくかった。
+「一応言っておくと、ミノルくんから聞いたわけじゃない。だけど、誰から聞いたかはいえない」ケイが、ぼくの考えを先読みしたように付け加えた。彼女の口からミノルの名前が出たことで、ぼくはいっそう混乱する。いったいどこでミノルのことを知ったのだろう。
+
+「答えたくなかったら、答えなくていい」ケイがさらに言葉を重ねる。どこでその話を聞いたかについて、それ以上話す気はなさそうだった。
+
+　話したくないのなら、まあいいか。ぼくは諦めてはじめの質問に答える。
+「小学生の頃の話だよ。物語のヒーローにあこがれるのと同じさ」
+
+　そう言ったあと、彼女のようにサイボーグにならざるをえない人もいる中で、サイボーグになりたいなんていっていたことが、あまりに無神経なことに思えて、恥ずかしくなった。
+「気を悪くしたのなら、ごめん」ぼくは目を伏せていった。
+
+「私こそ、ごめん。そんな気にさせるつもりはなかった」ケイがいう。その後、ぼくが何も話さないのを確認すると、彼女が続けた。
+「それじゃ今は、サイボーグになりたいとは思わない？」
+
+　こないだのミノルの質問と同じだった。ただ、きみのように強くなれるなら、なんて言えるはずもなく、言葉をにごす。
+「どうだろう……」そう言って彼女の方を見る。彼女は、立ったまま座るつもりがないようだった。考えてみれば、地面に座るというのは椅子に座るより難易度が高そうだ。彼女は、ぼくの方を見すえて、次の言葉を待っている。
+
+　他に誰もこの会話を聞いている人はおらず、ケイが別の誰かにここでの話をすることもないだろうと考えて、ぼくは気になっていたことを素直に聞くことにした。
+「きみは、サイボーグだからそんなに強いの？」目をそらしてたずねた。正面きって聞くことはできなかった。
+
+「面白いこと言うのね」ケイがいった。合成音声の調子はいつもと変わらなかったけれど、心なしか笑っているように聞こえた。
+「答えたくなかったら、答えなくていい」ぼくはうつむいたまま彼女の言葉をまねる。
+
+　すると、彼女もぼくから視線を外して、運動場の方をみながらいった。
+「口がかたそうだから話すけど、これからいうことは秘密にして」
+
+---
+
+「じゃあいったいどこで……？」
+
+「私も偶然聞いただけで、誰かが言いふらしているなんてことはないから」
+
 
 ケイ「いいえ、彼からではないわ」ミノルのことは知っているのか
 
