Add some sentences

--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -41,36 +41,55 @@
 　こないだのミノルの質問と同じだった。ただ、きみのように強くなれるなら、なんて言えるはずもなく、言葉をにごす。
 「どうだろう……」そう言って彼女の方を見る。彼女は、立ったまま座るつもりがないようだった。考えてみれば、地面に座るというのは椅子に座るより難易度が高そうだ。彼女は、ぼくの方を見すえて、次の言葉を待っている。
 
-　他に誰もこの会話を聞いている人はおらず、ケイが別の誰かにここでの話をすることもないだろうと考えて、ぼくは気になっていたことを素直に聞くことにした。
-「きみは、サイボーグだからそんなに強いの？」目をそらしてたずねた。正面きって聞くことはできなかった。
+　ぼくは、また目をそらす。ざっとあたりを見回したけれど、僕とケイが話していることに気づいている人はいなさそうだった。ケイが別の誰かにここでの話をすることもないだろう。意を決して、ぼくは気になっていたことを聞くことにした。
+「きみは、サイボーグだからそんなに強いの？」目をそらしたままたずねた。正面きって聞くことはできなかった。
 
-「面白いこと言うのね」ケイがいった。合成音声の調子はいつもと変わらなかったけれど、心なしか笑っているように聞こえた。
+「面白いこと言うのね」ケイがいう。合成音声の調子はいつもと変わらなかったけれど、心なしか笑っているように聞こえた。
 「答えたくなかったら、答えなくていい」ぼくはうつむいたまま彼女の言葉をまねる。
 
 　すると、彼女もぼくから視線を外して、運動場の方をみながらいった。
 「口がかたそうだから話すけど、これからいうことは秘密にして」
 
+　ぼくはうなずく。サイボーグになった経緯を聞かれたときのように、きっぱり断るだろうと思っていたので少し驚いた。
+
+「わたしが強いかどうかは、わたしにはわからない。でも、今のわたしがあるのは、わたしがサイボーグになったからだと確信をもっていえる」彼女は、そこで一瞬言葉を切った。
+
+「入学式の朝、ロボットかって言われたけれど、ロボット扱いされるはあれが初めてなんかじゃない。これまで何度もロボットに間違えられてきた。
+
+　サイボーグの体でようやく歩けるようになった頃、病院やリハビリ施設を歩いていると、よく目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。そういった施設でロボットといえば掃除ロボットくらいしかいなかったし、わたしも今よりずっとロボットらしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたの。
+
+　やるせなかった。
+自分が人間じゃないと
+
+後からわかったんだけど、
+なんでそんなことするかっていうと、私のことを掃除ロボットだと思ったみたい。施設には、
+
+掃除ロボット
+ショックだった。悪意はない。
+
+むしろ、わたしがサイボーグであることをわかったうえで悪意を持って聞いてきたぶん、扱いやすかった。数年前は、全身サイボーグなんてほとんど認知されていなかったし、ましてや、子どものサイボーグなんて想像打にされていなかった。
+昔なんかはいきなりロボット扱いされた
+
+昔は、あの朝みたいに、ロボットだと思われることは珍しくなかった。今でこそサイボーグが認知されて、
+
+サイボーグになってはじめて、鏡を見た時はやっぱりショックだった。
+
+ケイ「自分が機械の体になったことを認識したあとは、自分が本当に人間なのか自信を持てなくなった。いまでこそ、サイボーグという存在が知られてきたけれど、数年前、しかも子どものサイボーグなんて認知されてなかったから、ロボットだと思われた。入学式の朝の件は初めてじゃなかった。わたしは人間なんだということを強く持たないといけない。わたし自身の意志」
+
+これをき
+
 ---
 
-「じゃあいったいどこで……？」
 
-「私も偶然聞いただけで、誰かが言いふらしているなんてことはないから」
+「わたしがサイボーグになって目を覚ましたとき、そこにあったの地獄だった。もう聞いていると思うけど、わたしはひどい事故の結果、自分の意志とは関係なくサイボーグにされた。意識を取り戻したときには、かろうじて目と耳が機械化されていた。でも、それを通して見たり聞いたりする世界は、それまで生きてきた世界とは全くの別物だった。見たいものは見えず、聞きたいものは聞こえない。逆に、見たくなくても目をつむることはできないし、聞きたくないノイズばかりが聞こえてくる。なんとか人を認識して、話を聞くことができるようになると、両親はすでに死んでいること、わたしの体も脳以外ほとんど残っていないことが知らされた。でも、不思議なことにその時は何も感じなかった。悲しみや絶望を感じる感覚さえも麻痺してしまってたんだと思う」
 
+　言葉が出なかった。
 
-ケイ「いいえ、彼からではないわ」ミノルのことは知っているのか
+「その後は、医者や技術者にされるがまま体を拡張されていった。赤ん坊に戻ったように、少しずつ自分の体の動かし方を覚えていく。あの頃のわたしに、意識があったといえるのかわからない。ただがむしゃらに、指示されるがままトレーニングしていた。次に、わたしがわたしを意識したのは、自分で立って鏡の前に立ったときだった。わかってはいたけれど、自分の姿がショックだった。
 
-ヒロト「小さい頃のたわごとだよ。ヒーローにあこがれるのと同じさ」申し訳なく思った
-ヒロト「サイボーグになったから、そんなに強くなったの？」きいて恥ずかしくなる
-ケイ「面白いこというのね」
-「ごめん、いやならいいんだ」
-「でも、たぶんそうだと思う。サイボーグにならなかったら今の私はない」
+首を動かして自分の見ている向きを変えたり、言葉にならない音を出したりできるようになった。
 
-ケイ「口が硬そうだから話すけど、これから話すことは秘密にして」
-
-ケイ「事故にあって次に意識を取り戻したとき、そこにあったのは地獄だった。
-親は死んでいて、ほとんど脳だけの存在になっていた。視覚と聴覚はすでに接続済みだったけど、ノイズがひどくて慣れるまで時間がかかった」
-
-想像を絶する話だった。恐ろしくなった。
+「でも、わたしにはどうすることもできなかった。まだ手も足もなかったから、自殺することすらできない。かろうじてできたのは、イエスかノーの信号を発することとだった。わたしの近くには常に誰かがいて、サイボーグについて色々と話してくれた。訓練すれば手足を動かせるようになることとか、話せるようになることとか。わたしは彼らに言われるがまま、されるがままサイボーグになった。
 
 ケイ「自分が機械の体になったことを認識したあとは、自分が本当に人間なのか自信を持てなくなった。いまでこそ、サイボーグという存在が知られてきたけれど、数年前、しかも子どものサイボーグなんて認知されてなかったから、ロボットだと思われた。入学式の朝の件は初めてじゃなかった。自分を強く持たないといけない」
 
@@ -79,6 +98,9 @@
 ヒロト「体のせいにしてちゃダメだよね」
 
 ケイ「私は、そうは思わない。強くなろうとしたのは、私の意思と言えるかもしれないけれど、それは体のせいでもある。
+
+人間らしくなるために体を変えてきた
+
 心と体は密接に関係している。化粧とか。人間の歴史は身体の拡張
 丈夫な体になれば、心も強くなるという可能性はないとは思わない
 「強い体を手に入れたいと思うのは、不自然なことじゃない」
